--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Host=localhost;Port=5432;Database=CatalogDb;User Id=postgres;Password=Password;Include Error Detail=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
